--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://winten2:t10qV9xQP8E0SXwW@the5ers.jlafhkv.mongodb.net/?retryWrites=true&w=majority&appName=the5ers
-FMP_API=vvgGyUn1dMi4g6dxurwNdXhFEBQc4m76
+MONGODB_URI=
+FMP_API=
 CLIENT_URL=http://localhost:5173
 PORT=3000
